syntax = "proto3";
package mailer.v2;

import "google/protobuf/empty.proto";

option go_package = "github.com/GenesisEducationKyiv/software-engineering-school-4-0-hrvadl/protos/v2/mailer";

service MailerService {
  rpc Send(MailEvent) returns (google.protobuf.Empty);
}

message MailEvent {
  string eventID = 1;
  string eventType = 2;
  Mail data = 3;
}

message Mail {
  repeated string to = 2;
  string subject = 3;
  string html = 4;
}
